proyecto1vacas-master/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDBIT
    ID
    MAYORBIT
    MENORBIT
    MIENTRAS
    NOTBIT
    NUMERO
    ORBIT
    XORBIT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> asignacion_temp
Rule 6     instruccion -> borrar_temp
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     imprimir_instr -> IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
Rule 10    borrar_temp -> UNSET PARIZQ expresion_numerica PARDER PTCOMA
Rule 11    asignacion_temp -> TEMP IGUAL expresion_numerica PTCOMA
Rule 12    if_instr -> IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 13    if_else_instr -> IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
Rule 14    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 15    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 16    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 17    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 18    expresion_numerica -> expresion_numerica RESIDUO expresion_numerica
Rule 19    expresion_numerica -> expresion_numerica IGUALQUE expresion_numerica
Rule 20    expresion_numerica -> expresion_numerica NIGUALQUE expresion_numerica
Rule 21    expresion_numerica -> expresion_numerica MAYIGUAL expresion_numerica
Rule 22    expresion_numerica -> expresion_numerica MENIGUAL expresion_numerica
Rule 23    expresion_numerica -> expresion_numerica MAYQUE expresion_numerica
Rule 24    expresion_numerica -> expresion_numerica MENQUE expresion_numerica
Rule 25    expresion_numerica -> expresion_numerica AND expresion_numerica
Rule 26    expresion_numerica -> expresion_numerica OR expresion_numerica
Rule 27    expresion_numerica -> expresion_numerica XOR expresion_numerica
Rule 28    expresion_numerica -> NOT expresion_numerica
Rule 29    expresion_numerica -> PARIZQ INT PARDER expresion_numerica
Rule 30    expresion_numerica -> PARIZQ FLOAT PARDER expresion_numerica
Rule 31    expresion_numerica -> PARIZQ CHAR PARDER expresion_numerica
Rule 32    expresion_numerica -> MENOS expresion_numerica
Rule 33    expresion_numerica -> ABS PARIZQ expresion_numerica PARDER
Rule 34    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 35    expresion_numerica -> ENTERO
Rule 36    expresion_numerica -> DECIMAL
Rule 37    expresion_numerica -> TEMP
Rule 38    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 39    expresion_numerica -> CADENA
Rule 40    expresion_numerica -> CARACTER
Rule 41    expresion_cadena -> expresion_numerica
Rule 42    expresion_logica -> expresion_numerica MAYQUE expresion_numerica
Rule 43    expresion_logica -> expresion_numerica MENQUE expresion_numerica
Rule 44    expresion_logica -> expresion_numerica IGUALQUE expresion_numerica
Rule 45    expresion_logica -> expresion_numerica NIGUALQUE expresion_numerica

Terminals, with rules where they appear

ABS                  : 33
AND                  : 25
ANDBIT               : 
CADENA               : 39
CARACTER             : 40
CHAR                 : 31
CONCAT               : 38
DECIMAL              : 36
DIVIDIDO             : 17
ELSE                 : 13
ENTERO               : 35
FLOAT                : 30
ID                   : 
IF                   : 12 13
IGUAL                : 11
IGUALQUE             : 19 44
IMPRIMIR             : 9
INT                  : 29
LLAVDER              : 12 13 13
LLAVIZQ              : 12 13 13
MAS                  : 14
MAYIGUAL             : 21
MAYORBIT             : 
MAYQUE               : 23 42
MENIGUAL             : 22
MENORBIT             : 
MENOS                : 15 32
MENQUE               : 24 43
MIENTRAS             : 
NIGUALQUE            : 20 45
NOT                  : 28
NOTBIT               : 
NUMERO               : 
OR                   : 26
ORBIT                : 
PARDER               : 9 10 12 13 29 30 31 33 34
PARIZQ               : 9 10 12 13 29 30 31 33 34
POR                  : 16
PTCOMA               : 9 10 11
RESIDUO              : 18
TEMP                 : 11 37
UNSET                : 10
XOR                  : 27
XORBIT               : 
error                : 

Nonterminals, with rules where they appear

asignacion_temp      : 5
borrar_temp          : 6
expresion_cadena     : 9 38 38
expresion_logica     : 12 13
expresion_numerica   : 10 11 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 30 31 32 33 34 41 42 42 43 43 44 44 45 45
if_else_instr        : 8
if_instr             : 7
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 12 13 13

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . asignacion_temp
    (6) instruccion -> . borrar_temp
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) imprimir_instr -> . IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
    (11) asignacion_temp -> . TEMP IGUAL expresion_numerica PTCOMA
    (10) borrar_temp -> . UNSET PARIZQ expresion_numerica PARDER PTCOMA
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER

    IMPRIMIR        shift and go to state 9
    TEMP            shift and go to state 10
    UNSET           shift and go to state 11
    IF              shift and go to state 12

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    borrar_temp                    shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . asignacion_temp
    (6) instruccion -> . borrar_temp
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) imprimir_instr -> . IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
    (11) asignacion_temp -> . TEMP IGUAL expresion_numerica PTCOMA
    (10) borrar_temp -> . UNSET PARIZQ expresion_numerica PARDER PTCOMA
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 9
    TEMP            shift and go to state 10
    UNSET           shift and go to state 11
    IF              shift and go to state 12

    instruccion                    shift and go to state 13
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    borrar_temp                    shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 3 (instrucciones -> instruccion .)
    TEMP            reduce using rule 3 (instrucciones -> instruccion .)
    UNSET           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 4 (instruccion -> imprimir_instr .)
    TEMP            reduce using rule 4 (instruccion -> imprimir_instr .)
    UNSET           reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> asignacion_temp .

    IMPRIMIR        reduce using rule 5 (instruccion -> asignacion_temp .)
    TEMP            reduce using rule 5 (instruccion -> asignacion_temp .)
    UNSET           reduce using rule 5 (instruccion -> asignacion_temp .)
    IF              reduce using rule 5 (instruccion -> asignacion_temp .)
    $end            reduce using rule 5 (instruccion -> asignacion_temp .)
    LLAVDER         reduce using rule 5 (instruccion -> asignacion_temp .)


state 6

    (6) instruccion -> borrar_temp .

    IMPRIMIR        reduce using rule 6 (instruccion -> borrar_temp .)
    TEMP            reduce using rule 6 (instruccion -> borrar_temp .)
    UNSET           reduce using rule 6 (instruccion -> borrar_temp .)
    IF              reduce using rule 6 (instruccion -> borrar_temp .)
    $end            reduce using rule 6 (instruccion -> borrar_temp .)
    LLAVDER         reduce using rule 6 (instruccion -> borrar_temp .)


state 7

    (7) instruccion -> if_instr .

    IMPRIMIR        reduce using rule 7 (instruccion -> if_instr .)
    TEMP            reduce using rule 7 (instruccion -> if_instr .)
    UNSET           reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .

    IMPRIMIR        reduce using rule 8 (instruccion -> if_else_instr .)
    TEMP            reduce using rule 8 (instruccion -> if_else_instr .)
    UNSET           reduce using rule 8 (instruccion -> if_else_instr .)
    IF              reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) imprimir_instr -> IMPRIMIR . PARIZQ expresion_cadena PARDER PTCOMA

    PARIZQ          shift and go to state 14


state 10

    (11) asignacion_temp -> TEMP . IGUAL expresion_numerica PTCOMA

    IGUAL           shift and go to state 15


state 11

    (10) borrar_temp -> UNSET . PARIZQ expresion_numerica PARDER PTCOMA

    PARIZQ          shift and go to state 16


state 12

    (12) if_instr -> IF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> IF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 17


state 13

    (2) instrucciones -> instrucciones instruccion .

    IMPRIMIR        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TEMP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 14

    (9) imprimir_instr -> IMPRIMIR PARIZQ . expresion_cadena PARDER PTCOMA
    (38) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (41) expresion_cadena -> . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (19) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (20) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (21) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (22) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (23) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (24) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (26) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (27) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (28) expresion_numerica -> . NOT expresion_numerica
    (29) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (30) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (31) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (32) expresion_numerica -> . MENOS expresion_numerica
    (33) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (34) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (35) expresion_numerica -> . ENTERO
    (36) expresion_numerica -> . DECIMAL
    (37) expresion_numerica -> . TEMP
    (39) expresion_numerica -> . CADENA
    (40) expresion_numerica -> . CARACTER

    NOT             shift and go to state 22
    PARIZQ          shift and go to state 18
    MENOS           shift and go to state 21
    ABS             shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEMP            shift and go to state 26
    CADENA          shift and go to state 27
    CARACTER        shift and go to state 28

    expresion_cadena               shift and go to state 19
    expresion_numerica             shift and go to state 20

state 15

    (11) asignacion_temp -> TEMP IGUAL . expresion_numerica PTCOMA
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (19) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (20) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (21) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (22) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (23) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (24) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (26) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (27) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (28) expresion_numerica -> . NOT expresion_numerica
    (29) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (30) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (31) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (32) expresion_numerica -> . MENOS expresion_numerica
    (33) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (34) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (35) expresion_numerica -> . ENTERO
    (36) expresion_numerica -> . DECIMAL
    (37) expresion_numerica -> . TEMP
    (39) expresion_numerica -> . CADENA
    (40) expresion_numerica -> . CARACTER

    NOT             shift and go to state 22
    PARIZQ          shift and go to state 18
    MENOS           shift and go to state 21
    ABS             shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEMP            shift and go to state 26
    CADENA          shift and go to state 27
    CARACTER        shift and go to state 28

    expresion_numerica             shift and go to state 29

state 16

    (10) borrar_temp -> UNSET PARIZQ . expresion_numerica PARDER PTCOMA
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (19) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (20) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (21) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (22) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (23) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (24) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (26) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (27) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (28) expresion_numerica -> . NOT expresion_numerica
    (29) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (30) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (31) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (32) expresion_numerica -> . MENOS expresion_numerica
    (33) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (34) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (35) expresion_numerica -> . ENTERO
    (36) expresion_numerica -> . DECIMAL
    (37) expresion_numerica -> . TEMP
    (39) expresion_numerica -> . CADENA
    (40) expresion_numerica -> . CARACTER

    NOT             shift and go to state 22
    PARIZQ          shift and go to state 18
    MENOS           shift and go to state 21
    ABS             shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEMP            shift and go to state 26
    CADENA          shift and go to state 27
    CARACTER        shift and go to state 28

    expresion_numerica             shift and go to state 30

state 17

    (12) if_instr -> IF PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> IF PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
    (42) expresion_logica -> . expresion_numerica MAYQUE expresion_numerica
    (43) expresion_logica -> . expresion_numerica MENQUE expresion_numerica
    (44) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (45) expresion_logica -> . expresion_numerica NIGUALQUE expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (19) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (20) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (21) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (22) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (23) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (24) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (26) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (27) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (28) expresion_numerica -> . NOT expresion_numerica
    (29) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (30) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (31) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (32) expresion_numerica -> . MENOS expresion_numerica
    (33) expresion_numerica -> . ABS PARIZQ expresion_numerica PARDER
    (34) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (35) expresion_numerica -> . ENTERO
    (36) expresion_numerica -> . DECIMAL
    (37) expresion_numerica -> . TEMP
    (39) expresion_numerica -> . CADENA
    (40) expresion_numerica -> . CARACTER

    NOT             shift and go to state 22
    PARIZQ          shift and go to state 18
    MENOS           shift and go to state 21
    ABS             shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEMP            shift and go to state 26
    CADENA          shift and go to state 27
    CARACTER        shift and go to state 28

    expresion_logica               shift and go to state 31
    expresion_numerica             shift and go to state 32

state 18

    (29) expresion_numerica -> PARIZQ . INT PARDER expresion_numerica
    (30) expresion_numerica -> PARIZQ . FLOAT PARDER expresion_numerica
    (31) expresion_numerica -> PARIZQ . CHAR PARDER expresion_numerica
